Replace all String.format(..) calls with String.formatted(..).